added notOnly section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Cozy House</title>
 </head>
 <body>
-    <header>
+    <header>    
         <div class="headerFooterContainer">
             <div class="logo">
                 <h1>Cozy House</h1>
@@ -30,7 +30,16 @@
         
     </header>
     <main>
-        <div class="startScreen"></div>
+        <section class="notOnly">
+            <div class="startContainer mainContainer">
+                <div class="makeFriend">
+                    <h2>Not only people <br> need a house</h2>
+                    <div class="propos">We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</div>
+                    <button class="orangeButton">Make a friend</button>
+                </div>
+                <img class="startImg" src="./assets/start-screen-puppy.png" alt="puppy photo">
+            </div>            
+        </section>
     </main>
     <footer></footer>
     
