added: help section, Georgia fonts

--- a/index.html
+++ b/index.html
@@ -64,11 +64,54 @@
                     <div class="roundButton slideRight"><img src="./assets/ArrowLeft.png" class="arrow" alt="slide to right"></div>
                 </div>
                 <button class="orangeButton">Get to know the rest</button>
+                <div class="popUp">
+                    <div class="closeButton roundButton"> x</div>
+                    <div class="petPopUp"></div>
+                </div>
             </section>
-            <div class="center">qwe</div>
-            <div class="petPopUp">
-
-            </div>
+            <section id="help">
+                <h3>How you can help <br> our shelter</h3>
+                <div class="helpKinds">
+                    <div class="helpItem">
+                        <img src="./assets/Vector (3).png" alt="" class="helpImg">
+                        <div class="helpKind">Pet food</div>
+                    </div>  
+                    <div class="helpItem">
+                        <img src="./assets/transportation.png" alt="" class="helpImg">
+                        <div class="helpKind">Transportation</div>
+                    </div> 
+                    <div class="helpItem">
+                        <img src="./assets/toys.png" alt="" class="helpImg">
+                        <div class="helpKind">Toys</div>
+                    </div> 
+                    <div class="helpItem">
+                        <img src="./assets/bowls-and-cups.png" alt="" class="helpImg">
+                        <div class="helpKind">Bowls and cups</div>
+                    </div> 
+                    <div class="helpItem">
+                        <img src="./assets/shampoos.png" alt="" class="helpImg">
+                        <div class="helpKind">Shampoos</div>
+                    </div> 
+                    <div class="helpItem">
+                        <img src="./assets/vitamins.png" alt="" class="helpImg">
+                        <div class="helpKind">Vitamins</div>
+                    </div> 
+                    <div class="helpItem">
+                        <img src="./assets/medicines.png" alt="" class="helpImg">
+                        <div class="helpKind">Medicines</div>
+                    </div> 
+                    <div class="helpItem">
+                        <img src="./assets/collars-or-leashes.png" alt="" class="helpImg">
+                        <div class="helpKind">Collars / leashes</div>
+                    </div> 
+                    <div class="helpItem">
+                        <img src="./assets/sleeping-area.png" alt="" class="helpImg">
+                        <div class="helpKind">Sleeping areas</div>
+                    </div>    
+                </div>
+            </section>
+            
+            
         </div>
         <div class="grayBG"></div>
     </main>
