ourPets page is done

--- a/index.html
+++ b/index.html
@@ -12,17 +12,16 @@
     <header>    
         <div class="headerFooterContainer">
             <div class="logo">
-                <h1>Cozy House</h1>
-                <div class="subtitle">Shelter for pets in Boston</div>
-
+                <a href="./index.html"><h1>Cozy House</h1>
+                <div class="subtitle">Shelter for pets in Boston</div></a>
             </div>
             <div class="menu">
                 <nav>
                     <ul>
-                        <a href='#about'><li class="listItem">About the shelter</li></a>
-                        <a href='#ourFriends'><li class="listItem">Our pets</li></a>
-                        <a href="#help"><li class="listItem">Help the shelter</li></a>
-                        <a href=""><li class="listItem">Contacts</li></a>
+                        <a href='#about'><li class="listItem li_main" id="current_li">About the shelter</li></a>
+                        <a href='./pets.html'><li class="listItem li_main">Our pets</li></a>
+                        <a href="#help"><li class="listItem li_main">Help the shelter</li></a>
+                        <a href="#contacts"><li class="listItem li_main">Contacts</li></a>
                     </ul>
                 </nav>
             </div>
@@ -129,22 +128,22 @@
                     <h3 class="white">For questions and suggestions</h3>
                     <div class="contactItem">
                         <img src="./assets/mail.png" alt="e-mail pic"> 
-                        <h4 class="footerH4">email@shelter.com</h4> 
+                        <a href="mailto: email@shelter.com"><h4 class="footerH4">email@shelter.com</h4> </a>
                     </div>
                     <div class="contactItem">
                         <img src="./assets/phone.png" alt="phone pic"> 
-                        <h4 class="footerH4">+13 674 567 75 54</h4>
+                        <a href="tel: +13 674 567 75 54"><h4 class="footerH4">+13 674 567 75 54</h4></a>
                     </div>
                 </div>
                 <div class="location">
                     <h3 class="white">We are waiting for your visit</h3>
                     <div class="contactItem">
                         <img src="./assets/pin.png" alt="pin pic"> 
-                        <h4 class="footerH4">1 Central Street, Boston (entrance from the store)</h4>
+                        <a href="https://www.google.com/maps/place/Kheppipet/@53.9284606,27.5638872,15z/data=!4m2!3m1!1s0x0:0x6fe3a6a5ea40aec8?sa=X&ved=2ahUKEwj7yfOM9IL6AhVPposKHeBvDN4Q_BJ6BAgdEAU&hl=en"><h4 class="footerH4">1 Central Street, Boston (entrance from the store)</h4></a>
                     </div>
                     <div class="contactItem">
                         <img src="./assets/pin.png" alt="pin pic"> 
-                        <h4 class="footerH4">18 South Park, London </h4>
+                        <a href="https://www.google.com/maps/place/Kheppipet/@53.9284606,27.5638872,15z/data=!4m2!3m1!1s0x0:0x6fe3a6a5ea40aec8?sa=X&ved=2ahUKEwj7yfOM9IL6AhVPposKHeBvDN4Q_BJ6BAgdEAU&hl=en"><h4 class="footerH4">18 South Park, London </h4></a>
                     </div>
                 </div>
                 <img src="./assets/footer-puppy.png" alt="puppy">
