--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
                 <div class="makeFriend">
                     <h2>Not only people <br> need a house</h2>
                     <div class="propos">We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</div>
-                    <a href="#ourFriends"><button class="orangeButton">Make a friend</button></a>
+                    <a href="#ourFriends"><button class="orangeButton startButton">Make a friend</button></a>
                 </div>
+                <a href="#ourFriends"><button class="orangeButton startButton2">Make a friend</button></a>
                 <img class="startImg" src="./assets/start-screen-puppy.png" alt="puppy photo">
             </div>            
         </section>
