adaptive is done

--- a/index.html
+++ b/index.html
@@ -147,8 +147,9 @@
                         <a href="https://www.google.com/maps/place/Kheppipet/@53.9284606,27.5638872,15z/data=!4m2!3m1!1s0x0:0x6fe3a6a5ea40aec8?sa=X&ved=2ahUKEwj7yfOM9IL6AhVPposKHeBvDN4Q_BJ6BAgdEAU&hl=en"><h4 class="footerH4">18 South Park, London </h4></a>
                     </div>
                 </div>
-                <img src="./assets/footer-puppy.png" alt="puppy">
+                <img src="./assets/footer-puppy.png" alt="puppy" class="footerImg">
             </div>
+            <img src="./assets/footer-puppy.png" alt="puppy" class="footerImg_768 center">
         </div>
     </footer>
 <script src="index.js" type="module"></script>    
