--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
                 <div class="makeFriend">
                     <h2>Not only people <br> need a house</h2>
                     <div class="propos">We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</div>
-                    <a href="#ourFriends"><button class="orangeButton startButton">Make a friend</button></a>
+                    <a href="#ourFriends"><button class="orangeButton">Make a friend</button></a>
                 </div>
-                <a href="#ourFriends"><button class="orangeButton startButton2">Make a friend</button></a>
                 <img class="startImg" src="./assets/start-screen-puppy.png" alt="puppy photo">
             </div>            
         </section>
@@ -147,9 +146,8 @@
                         <a href="https://www.google.com/maps/place/Kheppipet/@53.9284606,27.5638872,15z/data=!4m2!3m1!1s0x0:0x6fe3a6a5ea40aec8?sa=X&ved=2ahUKEwj7yfOM9IL6AhVPposKHeBvDN4Q_BJ6BAgdEAU&hl=en"><h4 class="footerH4">18 South Park, London </h4></a>
                     </div>
                 </div>
-                <img src="./assets/footer-puppy.png" alt="puppy" class="footerImg">
+                <img src="./assets/footer-puppy.png" alt="puppy">
             </div>
-            <img src="./assets/footer-puppy.png" alt="puppy" class="footerImg_768 center">
         </div>
     </footer>
 <script src="index.js" type="module"></script>    
