corusel instead of slider

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </div>
                     <div class="roundButton slideRight"><img src="./assets/ArrowLeft.png" class="arrow" alt="slide to right"></div>
                 </div>
-                <button class="orangeButton">Get to know the rest</button>
+                <a href='./pets.html'><button class="orangeButton">Get to know the rest</button></a>
                 <div class="popUp">
                     <div class="closeButton roundButton"> x</div>
                     <div class="petPopUp"></div>
